# buidl-placeholder

./: .gitignore  README.md  package.json
.cursor/rules/: python.mdc  typescript.mdc
n8n-nodes-pinata-uploader/: .gitignore  README.md  n8n-nodes-pinata-uploader-0.1.0.tgz  package.json  tsconfig.json
n8n-nodes-pinata-uploader/src/: index.ts
n8n-nodes-pinata-uploader/src/credentials/: PinataApi.credentials.ts
src/config/: swagger.ts
src/services/: logger.service.ts  story.service.ts
src/tests/: ip.test.ts  ipfs-upload.test.ts
story-app/: .env.example  .gitignore  README.md  package-lock.json  package.json  register-ip-api-spec.md
story-app/src/: index.ts
story-app/src/config/: swagger.ts
story-app/src/controllers/: ip.controller.ts  story.controller.ts
story-app/src/middlewares/: error.middleware.ts  validation.middleware.ts
story-app/src/routes/: index.ts  ip.routes.ts  story.routes.ts
story-app/src/services/: ipfs.service.ts  logger.service.ts  story.service.ts
story-app/src/tests/: ip.test.http  ipfs-upload.test.ts  story-detail.test.ts  story-register.test.ts  story.test.http  story.test.ts
story-app/src/types/: errors.ts  ip.types.ts  (+1 more)
story-app/tasks/: register.md  todo.md
story-app/tests/: api.http
story-doc-embedding/: Makefile  README.md
story-doc-embedding/app/: config.py
story-search-tool/: .gitignore  pyproject.toml  spec.md
story-search-tool/app/: __init__.py  db_build.py  embedding.py  main.py  search.py
story-server/: .env.example  README.md  package-lock.json  package.json
story-server/tasks/: todo.md
(+6 files in other folders)
