[tool.poetry]
name = "story-search-tool"
version = "0.1.0"
description = "Story Protocol 문서 검색 시스템"
authors = ["ddevkim <ddevkim@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.115.9"
uvicorn = "^0.34.0"
langchain = "^0.3.23"
chromadb = "^1.0.4"
instructorembedding = "^1.0.1"
pydantic = "^2.11.3"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.21"
torch = "^2.6.0"
sentence-transformers = "^4.0.2"
langchain-core = "^0.3.51"
langchain-huggingface = "^0.1.2"
langchain-text-splitters = "^0.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
